# mistral-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-02-ocr-transcription-cli.md  2026-07-03-agentic-cli.md  2026-07-12-publish-polish.md  2026-07-13-rename-moxtral.md
docs/superpowers/specs/: 2026-07-02-ocr-transcription-cli-design.md  2026-07-03-agentic-cli-design.md  2026-07-04-dedupe-design.md  2026-07-12-publish-polish-design.md
src/mistral_cli/: __init__.py  __main__.py  config.py  console.py  dedupe.py  docs.md  errors.py  formatters.py  mistral_client.py  models.py  schema.py  sources.py  storage.py
src/mistral_cli/cli/: __init__.py  agent.py  common.py  config.py  docs.md  main.py  ocr.py  runner.py  transcribe.py
src/mistral_cli/data/: agent_guide.md
src/mistral_cli/services/: __init__.py  docs.md  ocr.py  transcription.py
src/moxtral/: __init__.py  __main__.py  config.py  dedupe.py  docs.md  errors.py  formatters.py  mistral_client.py  models.py  schema.py  sources.py  storage.py
src/moxtral/cli/: __init__.py  agent.py  common.py  config.py  docs.md  main.py  ocr.py  runner.py  transcribe.py
src/moxtral/data/: agent_guide.md
src/moxtral/services/: __init__.py  docs.md  ocr.py  transcription.py
tests/: test_agent_cli.py  test_cli_common.py  test_cli_root.py  test_config.py  test_config_cli.py  test_console.py  test_dedupe.py  test_errors.py  test_formatters.py  test_mistral_client.py  test_models.py  test_ocr_cli.py  test_schema.py  test_services.py  test_sources.py  test_storage.py  test_transcribe_cli.py  test_version.py
