[project]
name = "mistral-cli"
version = "0.2.0"
description = "A modern CLI for Mistral OCR and audio transcription"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.2,<9",
    "httpx>=0.28.1,<1",
    "mistralai>=2.5.1,<3",
    "rich>=15.0.0,<16",
    "tomli-w>=1.2.0,<2",
]

[project.scripts]
mistral = "mistral_cli.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/pyproject.toml",
    "/src",
    "/uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mistral_cli"]

[dependency-groups]
dev = [
    "pyright>=1.1.411,<2",
    "pytest>=9.1.1,<10",
    "pytest-cov>=7.0.0,<8",
    "ruff>=0.15.20,<0.16",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
