[project]
name = "moxtral"
version = "0.4.1"
description = "A modern CLI for Mistral OCR and Voxtral audio transcription (independent project, not affiliated with Mistral AI)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Max Boettinger" }]
requires-python = ">=3.11"
keywords = ["mistral", "ocr", "voxtral", "transcription", "speech-to-text", "cli", "markdown", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "click>=8.4.2,<9",
    "httpx>=0.28.1,<1",
    "mistralai>=2.5.1,<3",
    "tomli-w>=1.2.0,<2",
]

[project.scripts]
moxtral = "moxtral.cli.main:cli"

[project.urls]
Repository = "https://github.com/maxboettinger/moxtral"
Issues = "https://github.com/maxboettinger/moxtral/issues"
Changelog = "https://github.com/maxboettinger/moxtral/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/pyproject.toml",
    "/src",
    "/uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["src/moxtral"]
exclude = ["**/docs.md"]

[dependency-groups]
dev = [
    "pyright>=1.1.411,<2",
    "pytest>=9.1.1,<10",
    "pytest-cov>=7.0.0,<8",
    "ruff>=0.15.20,<0.16",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
